# supreme-robot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  next.config.ts  package-lock.json  package.json
.claude/: settings.json
.claude/docs/: age-system.md  ai-prompts.md  game-design.md
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/src/api/: api_get_locality.py  api_list_by_judet.py  api_list_judete.py
backend/src/pipeline/: pipeline_fetch_siruta_list.py  pipeline_import_ancom.py  pipeline_import_ins.py  pipeline_import_osm.py  pipeline_import_wikidata.py
backend/src/shared/: ddb.py  judete.py  models.py  response.py
backend/tests/: conftest.py  test_api_get_locality.py  test_api_list_by_judet.py  test_api_list_judete.py  test_pipeline_import_wikidata.py
docs/: architecture.md  data-model.md  data-sources.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  judete.ts  types.ts  utils.ts
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: lifesim-stack.ts
infrastructure/lib/stacks/: api-stack.ts  cert-stack.ts  frontend-stack.ts  pipeline-stack.ts  storage-stack.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/access/: page.tsx
src/app/game/: page.tsx
src/app/new-game/: page.tsx
src/app/summary/: page.tsx
src/hooks/: useGame.ts  useTypewriter.ts
src/lib/: i18n.ts
src/lib/types/: ai.ts  (+2 more)
src/providers/: GameProvider.tsx
(+32 files in other folders)
